@@ -8,10 +8,14 @@ __metaclass__ = type
 
 from optparse import OptionParser
 import os
-import re
 import subprocess
 import sys
 import traceback
+
+from lpbuildd.util import (
+    set_personality,
+    shell_escape,
+    )
 
 
 RETCODE_SUCCESS = 0
@@ -29,41 +33,6 @@ def get_build_path(build_id, *extra):
     return os.path.join(os.environ["HOME"], "build-" + build_id, *extra)
 
 
-non_meta_re = re.compile(r'^[a-zA-Z0-9+,./:=@_-]+$')
-
-def shell_escape(arg):
-    if non_meta_re.match(arg):
-        return arg
-    else:
-        return "'%s'" % arg.replace("'", "'\\''")
-
-
-linux32_arches = [
-    "armel",
-    "armhf",
-    "hppa",
-    "i386",
-    "lpia",
-    "mips",
-    "mipsel",
-    "powerpc",
-    "s390",
-    "sparc",
-    ]
-linux64_arches = [
-    "alpha",
-    "amd64",
-    "arm64",
-    "hppa64",
-    "ia64",
-    "ppc64",
-    "ppc64el",
-    "s390x",
-    "sparc64",
-    "x32",
-    ]
-
-
 class LiveFSBuilder:
     """Builds a live file system."""
 
@@ -77,10 +46,7 @@ class LiveFSBuilder:
 
         :param args: the command and arguments to run.
         """
-        if self.options.arch in linux32_arches:
-            args = ["linux32"] + args
-        elif self.options.arch in linux64_arches:
-            args = ["linux64"] + args
+        args = set_personality(self.options.arch, args)
         if echo:
             print "Running in chroot: %s" % ' '.join(
                 "'%s'" % arg for arg in args)
